modified:   style.css

--- a/style.css
+++ b/style.css
@@ -250,6 +250,10 @@ header img {
     margin-top: 250px;
   }
 
+  .icon-group {
+    display: flex;
+  }
+
   .modal {
     margin-top: 230px;
   }
